<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.github.warmuuh</groupId>
		<artifactId>milkman-parent</artifactId>
		<version>5.10.0-SNAPSHOT</version>
	</parent>
	<artifactId>milkman-dist</artifactId>

	<scm>
		<url>https://github.com/warmuuh/milkman</url>
		<connection>scm:git:https://github.com/warmuuh/milkman</connection>
		<tag>${project.version}</tag>
	</scm>

	<properties>
		<maven.deploy.skip>true</maven.deploy.skip>
		<jdk.version>21.0.2+14</jdk.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-sync-git</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-cli</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-note</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-jdbc</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-cassandra</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-rest</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-ws</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.7.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-scripting</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-explore</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-privatebin</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-graphql</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-grpc</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-test</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-auth</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-sio</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-nosql</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.warmuuh</groupId>
			<artifactId>milkman-plugins-management</artifactId>
			<version>5.10.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.10.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>2.4.1</version>
				<executions>
					<execution>
						<id>l4j-clui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>gui</headerType>
							<outfile>target/milkman.exe</outfile>
							<errTitle>Milkman</errTitle>
							<icon>src/bin/win/milkman.ico</icon>
							<classPath>
								<mainClass>milkman.MilkmanApplication</mainClass>
								<addDependencies>false</addDependencies>
								<preCp>plugins/*;milkman.jar</preCp>
							</classPath>
							<jre>
								<path>.\jre-win64\</path>
								<!-- <minVersion>11</minVersion> -->
								<!-- <maxVersion>1.9.0</maxVersion> -->
								<opts>
									<opt>-XX:SharedArchiveFile=app-cds.jsa</opt>
									<opt>-client</opt>
									<opt>-Xmx2G</opt>
									<opt>-XX:+UseCompressedOops</opt>
									<opt>-XX:+UseCompressedClassPointers</opt>
<!-- 									<opt>-Xlog:class+load:file=cds3.log</opt> -->
									<!-- <opt>-Djava.endorsed.dirs=./endorsed</opt> --><!-- not yet supported with modules -->
									<opt><![CDATA[--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-exports javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-exports javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-exports javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-opens javafx.graphics/javafx.scene=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-opens javafx.graphics/javafx.scene.text=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-opens javafx.graphics/com.sun.javafx.text=ALL-UNNAMED]]></opt>
									<opt><![CDATA[--add-opens java.base/java.lang.reflect=ALL-UNNAMED]]></opt>
									<opt>-Dprism.dirtyopts=false</opt>
								</opts>
							</jre>
							<versionInfo>
								<fileVersion>2.0.0.0</fileVersion>
								<txtFileVersion>2.0.0.0</txtFileVersion>
								<fileDescription>Milkman</fileDescription>
								<copyright>copyright</copyright>
								<productVersion>2.0.0.0</productVersion>
								<txtProductVersion>2.0.0.0</txtProductVersion>
								<productName>Milkman</productName>
								<internalName>milkman</internalName>
								<originalFilename>milkman.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- <plugin> -->
			<!-- <groupId>sh.tak.appbundler</groupId> -->
			<!-- <artifactId>appbundle-maven-plugin</artifactId> -->
			<!-- <version>1.2.0</version> -->
			<!-- <configuration> -->
			<!-- <mainClass>milkman.MilkmanApplication</mainClass> -->
			<!-- <iconFile>src/bin/milkman.icns</iconFile> -->
			<!-- <generateDiskImageFile>true</generateDiskImageFile> -->
			<!-- </configuration> -->
			<!-- <executions> -->
			<!-- <execution> -->
			<!-- <phase>package</phase> -->
			<!-- <goals> -->
			<!-- <goal>bundle</goal> -->
			<!-- </goals> -->
			<!-- </execution> -->
			<!-- </executions> -->
			<!-- </plugin> -->


			<plugin>
				<!--<groupId>com.igormaznitsa</groupId>
				<artifactId>mvn-jlink-wrapper</artifactId>
				<version>1.0.4</version>-->
				<groupId>com.igormaznitsa</groupId>
				<artifactId>mvn-jlink-wrapper</artifactId>
				<version>1.2.1</version>
				<configuration>
					<!-- <modulePath>${env.JAVAFX_MODS}</modulePath> -->
					<addModules>
						<addModule>java.base</addModule>
						<addModule>java.compiler</addModule>
						<addModule>java.datatransfer</addModule>
						<addModule>java.desktop</addModule>
						<addModule>java.logging</addModule>
						<addModule>java.management</addModule>
						<addModule>java.naming</addModule>
						<addModule>java.scripting</addModule>
						<addModule>java.sql</addModule>
						<addModule>java.xml</addModule>
						<addModule>java.rmi</addModule>
						<addModule>java.net.http</addModule>
						<addModule>jdk.jsobject</addModule>
						<addModule>jdk.crypto.ec</addModule>
						<addModule>jdk.unsupported</addModule>
						<addModule>jdk.unsupported.desktop</addModule>
						<addModule>jdk.xml.dom</addModule>
						<addModule>javafx.controls</addModule>
						<addModule>java.security.jgss</addModule>
						<addModule>jdk.httpserver</addModule>
						<addModule>jdk.dynalink</addModule>
					</addModules>
					<options>
						<option>--compress=2</option>
						<option>--no-header-files</option>
						<option>--no-man-pages</option>
<!--						breaks cross-platform compilation: -->
<!--						<option>&#45;&#45;generate-cds-archive</option>-->
						<option>--vm=client</option>
					</options>
					<output/>
					<tool/>
				</configuration>
				<executions>
					<execution>
						<id>call-jlink-win</id>
						<goals>
							<goal>jlink</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<output>${project.build.directory}${file.separator}jre-win64</output>

							<provider>BELLSOFT</provider><!-- liberica contains javafx -->
							<providerConfig>
								<version>${jdk.version}</version>
								<arch>amd64-full</arch>
								<type>jdk</type>
								<os>windows</os>
							</providerConfig>
						</configuration>
					</execution>
					<execution>
						<id>call-jlink-linux</id>
						<goals>
							<goal>jlink</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<output>${project.build.directory}${file.separator}jre-linux64</output>

							<provider>BELLSOFT</provider><!-- liberica contains javafx -->
							<providerConfig>
								<version>${jdk.version}</version>
								<arch>amd64-full</arch>
								<type>jdk</type>
								<os>linux</os>
							</providerConfig>
						</configuration>
					</execution>
					<execution>
						<id>call-jlink-macos</id>
						<goals>
							<goal>jlink</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<output>${project.build.directory}${file.separator}jre-macos64</output>

							<provider>BELLSOFT</provider><!-- liberica contains javafx -->
							<providerConfig>
								<version>${jdk.version}</version>
								<arch>amd64-full</arch>
								<type>jdk</type>
								<os>macos</os>
							</providerConfig>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>distro-assembly-win</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>${project.artifactId}-win64</finalName>
							<descriptors>
								<descriptor>src/assembly/bin-win.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
					<execution>
						<id>distro-assembly-linux</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<tarLongFileMode>posix</tarLongFileMode>
							<finalName>${project.artifactId}-linux64</finalName>
							<descriptors>
								<descriptor>src/assembly/bin-linux.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
					<execution>
						<id>distro-assembly-macos</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<tarLongFileMode>posix</tarLongFileMode>
							<finalName>${project.artifactId}-macos64</finalName>
							<descriptors>
								<descriptor>src/assembly/bin-macos.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
					<execution>
						<id>distro-assembly-macos-bundle</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<tarLongFileMode>posix</tarLongFileMode>
							<finalName>${project.artifactId}-appbundle-macos64</finalName>
							<descriptors>
								<descriptor>src/assembly/bundle-macos.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
					<execution>
						<id>plugin-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>${project.artifactId}-plugins</finalName>
							<descriptors>
								<descriptor>src/assembly/plugins-bin.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
					<execution>
						<id>plugin-jars-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>plugin-jars</finalName>
							<descriptors>
								<descriptor>src/assembly/plugins-jars.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
					<execution>
						<id>assembly-cli</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<tarLongFileMode>posix</tarLongFileMode>
							<finalName>${project.artifactId}-cli</finalName>
							<descriptors>
								<descriptor>src/assembly/bin-cli.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>de.jutzig</groupId>
				<artifactId>github-release-plugin</artifactId>
				<version>1.4.0</version>
				<configuration>
					<description>
						Release of Milkman.
						See [Changelog](/changelog.md) for changes.
					</description>
					<releaseName>${project.version}</releaseName>
					<tag>${project.version}</tag>
					<artifact>${project.artifactId}-bin.zip</artifact>

					<!-- If your project has additional artifacts, such as ones produced 
						by the maven-assembly-plugin, you can define the following (requires version 
						1.1.1 of the plugin or higher): -->
					<fileSets>
						<fileSet>
							<directory>${project.build.directory}</directory>
							<includes>
								<include>${project.artifactId}*.tar.gz</include>
								<include>${project.artifactId}*.tgz</include>
								<include>${project.artifactId}*.zip</include>
							</includes>
							<excludes>
								<exclude>${project.artifactId}*.jar</exclude>
							</excludes>
						</fileSet>
						<fileSet>
							<directory>${project.build.directory}/plugin-jars-bin</directory>
							<includes>
								<include>*.jar</include>
							</includes>
						</fileSet>
					</fileSets>

				</configuration>

				<executions>
					<execution>
						<id>delpoy-github</id>
						<goals>
							<goal>release</goal>
						</goals>
						<phase>deploy</phase>
					</execution>
					<execution>
						<id>deploy-nightly</id>
						<goals>
							<goal>release</goal>
						</goals>
						<phase>none</phase>
						<configuration>
							<overwriteArtifact>true</overwriteArtifact>
							<tag>nightly</tag>
							<releaseName>Nightly Build</releaseName>
							<description>
								Nightly Release of Milkman.
								See [Changelog](/changelog.md) for changes.
							</description>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	

	<pluginRepositories>
		<pluginRepository>
		    <id>jitpack.io</id>
		    <url>https://jitpack.io</url>
		</pluginRepository>
	</pluginRepositories>


</project>
